--- a/gb/ncid278_2.md
+++ b/gb/ncid278_2.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725052.md#1" target="_blank">美国会议员：中共将垮台 支持中国人退党</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-ron--150x120.jpg" align ="left"></a>美国国会议员莱特（Ron Wright）12月10日接受大纪元采访表示，香港为自由的抗争感动了全世界；自由和共产主义不能共存，中共终将垮台；支持中国人采取行动退党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-150x120.jpg" align ="left"></a>广东茂名建火葬场事件再爆发激烈冲突。上周，播扬镇民众怀疑政府故伎重施，以建净化水设施为由在当地修建火葬场，引发村民强烈抵制，并发生激烈警民冲突和流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank">港人给抗议者们写圣诞卡：以后再庆祝</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg" align ="left"></a>香港民主运动持续进行。圣诞节将近，抗议者们没有因此放松，在坚持抗争的同时，他们还不忘给受伤和被拘留的手足们写圣诞贺卡，送上自己的一份鼓励和祝福。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:17 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/21/n11737459.md#1" target="_blank">超时加班和抑郁 长安福特30岁工程师跳楼亡</a><br></h3>12月20日，一条题为《长安福特AE工程师之死》的文章在网上广泛传播。文章作者称自己的丈夫邓某某为长安福特汽车有限公司一名工程师，入职8年，由于工作压力大，持续加班患上抑郁症，年仅30岁抑郁跳楼身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank">大马前总理卷入新案 涉下令谋杀蒙古模特</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/GettyImages-991185274-150x120.jpg" align ="left"></a>深陷腐败指控的马来西亚前总理纳吉布·拉扎克（Najib Razak），近日又被卷入了一桩谋杀蒙古模特的丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/21/n11736771.md#1" target="_blank">四川轻化工大学副教授因言受罚</a><br></h3>中国大专院校学术自由空间持续萎缩。四川轻化工大学副教授李志被指发表不当言论，违反了高校教师准则，近期受到校方行政处罚，并被调离其所任职的马克思主义学院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11732974.md#1" target="_blank">告诉人真相 法轮功学员丁宝云面临非法庭审</a><br></h3>日前，山东济南仲宫镇法轮功学员丁宝云接到章丘区法院人员电话，让她去拿传票、开庭通知书和起诉书。章丘区法院欲在12月24日对丁宝云非法庭审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11731456.md#1" target="_blank">【唐靖远快评】中共战狼式大外宣频频触礁</a><br></h3>最近这两天，在中共大外宣领域接连发生大事件，而且当事人称得上是一个比一个大牌，一时间网络舆情汹涌，可以说赚足了公众的目光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:02 PM							</td></tr>
