--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11721507.md#1" target="_blank">陈光诚：中共所为人神共怒 历史关键时刻到来</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11721507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191211090850100699-150x120.jpg" align ="left"></a>12月10日是国际人权日，“全球反迫害制止中共暴行、声援退党大潮”研讨会在美国国会举行。维权律师陈光诚说，中共的所作所为令人神共怒，目前是关键的历史时刻。“中共已经到了遭劫在数、在数难逃的这样一个境地，可以说，它的末日马上就要来到了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 1:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11721473.md#1" target="_blank">不舍10万手术费 48岁河南男子出走离世</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11721473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-1-150x120.gif" align ="left"></a>河南焦作48岁的男子韦某某查出冠心病，听说治疗费要10万后，不想拖累家人，偷偷从医院离开。苦寻数天后家人终于找到他，但他已离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 1:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11721141.md#1" target="_blank">2020台湾大选14日起跑 中选会拼开票日</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11721141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a2259b25f9d7f9114afc5583a97f5217-150x120.jpg" align ="left"></a>中选会13日举行第15任总统副总统竞选活动起跑暨电脑计票及资安记者会，公告第15任总统副总统选举候选人名单。第15任总统副总统选举共有3组候选人，宋楚瑜及余湘、韩国瑜及张善政、蔡英文及赖清德，竞选活动期间12月14日起至109年1月10日止，为期28日，每日竞选活动时间自上午7时起至下午10时止。主委李进勇表示，目标投票日当天晚上10点完成计票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11720718.md#1" target="_blank">川普祝贺约翰逊胜选 期待英美大笔贸易协议</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11720718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188198531-150x120.jpg" align ="left"></a>美国总统川普（特朗普）庆祝约翰逊的压倒性胜利，他说这会引发英美之间“大笔”贸易协定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730296.md#1" target="_blank">瑞典环保少女晒德国坐车照 引发争议</a><br></h3>瑞典环保少女格雷塔日前搭火车回家时公布了一张她坐在火车地上的照片，结果却引发德国网民对虚伪与诚实的热烈讨论，连德国顶级政治人物都发表了意见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729514.md#1" target="_blank">每日三退声明精选（2019/12/17）</a><br></h3>我是律师，常常为捍卫公民权力利益与中共邪党暴政法官党徒发生冲突，时间长了，也认识到中共法律对公民残暴打击的邪恶性质。我崇尚民主、道德、公正、独立的法律制度，声明退出中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728228.md#1" target="_blank">助中共官员非法来台 白狼之子旅行社遭搜索</a><br></h3>新北市水资源经济发展协会负责人洪庆淋涉嫌勾结国内20多间非甲种旅行社，伪造文件以专业交流名义申请入台许可，让至少逾5千名中国公务员非法来台；检方17日针对包含统促党总裁“白狼”张安乐之子张玮经营的“华夏大地旅行社”在内的6家旅行社进行第二波搜索。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727802.md#1" target="_blank">四川少年在家中自杀 父亲看到其生前漫画崩溃</a><br></h3>12月9日，四川绵阳市三台县芦溪镇广华寺村12岁少年刘少军在家中上吊身亡。在整理儿子遗物时，父亲刘明照被儿子生前所画的一副描绘学生不堪老师暴力而自尽的漫画所震惊。联想到儿子入殓时身上有伤痕，刘明照觉得儿子遭受了校园暴力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:47 PM							</td></tr>
