--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -16,7 +16,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank">克鲁兹：弹劾案已崩溃 民主党阵脚大乱</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1KI7GJ-150x120.jpg" align ="left"></a>在众议院投票通过指控川普（特朗普）总统“滥用权力”和“阻碍国会”弹劾条款的翌日，德克萨斯州共和党参议员特德·克鲁兹（Ted Cruz）向媒体表示，民主党人目前感到很焦虑，因为他们发起的弹劾案已经崩溃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11732846.md#1" target="_blank">中共严重介选 叶望辉：台人有守护民主的韧性</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11732846.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/53efdf5ed9111b0206585c10a2cc0ba5-150x120.jpg" align ="left"></a>曾任白宫国安顾问的叶望辉，带着美国媒体观察团，周四（12月19日）与台湾媒体进行座谈会。叶望辉表示，这半年香港情势应证了，北京不在乎和平、只重控制。他说，中共严重介入台湾选举，更让世界看到了台湾人热爱民主的韧性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 1:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11731608.md#1" target="_blank">【拍案惊奇】弹劾案来龙去脉 罢免川普很难</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11731608.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1a21e1316d352_ttl7daySYx_bg1218-150x120.jpg" align ="left"></a>周三中午，美国众议院开始了弹劾川普的辩论，辩论预计持续6个小时，之后会对川普的两项弹劾条款投票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11731341.md#1" target="_blank">四川3岁幼儿感冒输液 家长惊见管中有虫</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11731341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/bkn-20191218074313367-1218_00952_001_01p-150x120.jpg" align ="left"></a>近日，四川乐山的黄先生在儿子输液几分钟后发现输液管中有虫，他愤怒质问护士细菌是否会进入体内，护士立即停止输液。据悉，涉事厂家曾3次因违法生产医疗器械被罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 7:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738135.md#1" target="_blank">久坐玩手机每天吃汉堡 扬州男童患重度脂肪肝</a><br></h3>近日，江苏扬州9岁男童优优（化名）因肺炎就医。医生注意到，优优的体重竟有120斤，一检查，发现他还患上了重度脂肪肝。原来，优优爱玩手机，经常久坐不动，还每天吃汉堡喝饮料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738059.md#1" target="_blank">沪男子图好玩点燃杨絮 烧毁3770万财产</a><br></h3>今年5月，上海青浦39岁男子汪某出于好玩，用打火机点燃一堆白杨絮。白杨絮起火后引燃一旁的塑料废品等可燃物，火势蔓延到邻近的一家公司内，使该公司冷库着火烧毁。此次事故造成直接经济损失超3770万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11737991.md#1" target="_blank">每日三退声明精选（2019/12/21）</a><br></h3>我因为在去年P2P的金融灾难中，已经倾家荡产，无法生活。那位诈骗犯逃到美国一年多了，我们向各级政府反映问题，要求惩办诈骗犯。结果政府和黑警却抓捕、殴打、恐吓、关押维权的受害者，我们过着生不如死的日子，天下之大怎么就没有说理的地方呢？在反思过程中终于醒悟，我们全国3.2亿的金融灾民被诈骗的原因就是我们太相信政府和大裤衩的新闻，以至于我们误判了国内的经济状况，其.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:37 AM							</td></tr>
