--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -8,6 +8,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11745485.md#1" target="_blank">大豆增肌减脂防失智！豆浆等6道养生料理教你做</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11745485.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/soybean-milk_149094071-150x120.jpg" align ="left"></a>台湾产大豆由于食物里程短，送达消费者手中时，豆仁都是粒粒新鲜饱满，朴实中带有土地独有的香气。大豆增肌减脂、防失智，有6大益处。几道非常简单易学的大豆养生料理，让你轻松吃出健康。大豆富含蛋白质，以及大豆异黄酮等独特的营养素，被称为“蔬菜中的肉类”。用大豆做豆浆、黑豆茶、炖汤等简单的料理，不仅美味，也颇具养生价值。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11747064.md#1" target="_blank">研究：“坐”超过8小时 提升忧郁情绪</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11747064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_623648666-150x120.jpg" align ="left"></a>一篇刊登于美国《公共科学图书馆》的研究指出，每天久坐超过8小时者忧郁及焦虑程度较高。专家建议，民众可透过手机App、运动手环等工具，设定一天坐着的时间不超过8小时，提醒自己定时起来走动，可降低久坐对身心健康产生的危害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 9:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746235.md#1" target="_blank">“绿色宠物”当道  2020年室内植物5大趋势</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746235.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/Fotolia_81461038_Subscription_L-150x120.jpg" align ="left"></a>近年来，消费者对室内植物的需求迅速增长，在进入新一年之际，许多园艺专家也分享了他们对2020年室内园艺的趋势分析。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 3:05 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746044.md#1" target="_blank">高750公尺 世界最大圣诞树在意大利</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-72796439-150x120.jpg" align ="left"></a>在意大利中部城镇古比奥（Gubbio）的山坡上，由巨型灯饰组成的世界最大圣诞树，每年都会在圣诞节之前点亮，今年也不例外。在过去几十年来，这已经成为当地的传统以及吸引游客造访的亮点之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11744475.md#1" target="_blank">“天然抗生素”猪母乳 用蒜头炒就很好吃</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11744475.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191225_shouhui_vegetable_01-150x120.jpg" align ="left"></a>王宝钏苦守寒窑十八年，靠采桑及吃猪母乳、鸟苋仔、乌甜仔等野菜过活，日夜盼望从军的薛平贵功成名就回家团圆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745027.md#1" target="_blank">【美食天堂】酸甜糖醋鱼～外酥内嫩好入口</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Sweet-and-Sour-Fish1-150x120.jpeg" align ="left"></a>为什么围炉桌上少不了一条鱼？不论那一种料理方式（清蒸、香煎、糖醋），在年夜饭不将鱼肉吃完，表示新的一年财富够用有“剩”下，年年有“余”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11742993.md#1" target="_blank">93岁老奶奶玩角色扮演Cosplay大红 粉丝百万</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11742993.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/825f5afa8260590218371708b38b9a49-150x120.jpg" align ="left"></a>角色扮演（Cosplay）向来都是年轻人在玩，没想到一位美国93岁的老奶奶和27岁的孙子联手，大玩各种有趣的角色扮演，再把它们放在网路上后，让老奶奶成为世界知名网红，各网站加起来有100万以上的粉丝群呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:49 PM			</td></tr>
@@ -34,12 +35,5 @@
 
 宫寒的女性应适当加强运动。一般来说，宫寒者偏于安静沉稳，中医认为“动则生阳”，每周需做三～四次“痛经缓解操”来增加阳气。另外，也可以利用有氧运动，如快走、游泳、慢跑等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 2:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11741825.md#1" target="_blank">圣诞玩具被偷 美警局发现窃贼竟是自家狗</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11741825.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-511711926-150x120.jpg" align ="left"></a>美国麻萨诸塞州富兰克林警察局（Franklin Police Department）内的圣诞玩具近来频频失踪，该局警员经追查后当场逮到现行犯正在行窃玩具，而这个窃贼竟是该局所饲养的一只小狗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 2:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741393.md#1" target="_blank">悉尼渔市场海鲜马拉松“开跑”料吸引10万人</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741393.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1310219-150x120.jpg" align ="left"></a>12月23日，悉尼鱼市场一年一度的海鲜马拉松又开始了！从当日清晨5点开始，鱼市场的店铺将会通宵营业，直到第二天平安夜的下午5点，连续36个小时。
-
-悉尼鱼市场是南半球最大规模的鱼市场，出售100多种海鲜。连续举办了24年的海鲜马拉松，已经成为了悉尼圣诞节的一个特色传统，也是鱼市场一年中最繁忙的日子。
-
-
-
-.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
